third step finished

--- a/src/artist.html
+++ b/src/artist.html
@@ -8,6 +8,50 @@
   <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+  <header class="bg-header-artist bg-header">
+    <div class="container">
+      <nav class="nav-wrapper">
+        <div class="nav-element nav-music">
+          Music Box
+        </div>
+        <div class="nav-element">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">
+                Главная
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="artist.html" class="nav-link selected">
+                Каталог
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                Исполнители
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                Контакты
+              </a>
+            </li>
+         </ul>
+        </div>
+        <div class="nav-element nav-search">
+          <a href="#" class="search-link">Поиск...</a>
+        </div>
+      </nav>
+      <section class="page-description">
+        
+      </section>
+    </div>
+  </header>
+  <main>
 
+  </main>
+  <footer>
+
+  </footer>
 </body>
 </html>
