--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,12 @@
         <div class="nav-element">
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="#" class="nav-link">
+              <a href="index.html" class="nav-link selected">
                 Главная
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">
+              <a href="artist.html" class="nav-link">
                 Каталог
               </a>
             </li>
@@ -58,7 +58,44 @@
       </section>
     </div>
   </header>
+  <main>
+    <section class="page-pricing container">
+      <h2 class="title-pricing">Формы подписки</h2>
+      <div class="catalog-wrapper">
+        <div class="pricing-item bg-free">
+          <h3 class="card-item">Бесплатная</h3>
+          <p class="pricing-value"><span class="price">0</span><span> РУБ.</span></p>
+          <a href="#" class="btn btn-trans">Оформить</a>
+          <p class="pricing-footer">
+            Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама
+          </p>
+        </div>
+        <div class="pricing-item bg-standard">
+          <h3 class="card-item">Стандартная</h3>
+          <p class="pricing-value"><span class="price">250</span><span> РУБ.</span></p>
+          <a href="#" class="btn btn-trans">Оформить</a>
+          <p class="pricing-footer">
+            Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве
+          </p>
+        </div>
+        <div class="pricing-item bg-premium">
+          <h3 class="card-item">Премиум</h3>
+          <p class="pricing-value"><span class="price">500</span><span> РУБ.</span></p>
+          <a href="#" class="btn btn-trans">Оформить</a>
+          <p class="pricing-footer">
+            Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве
+          </p>
+        </div>
+      </div>
+      <p class="price-description">
+        На всех тарифах возможно прослушивание музыки с мобильных устройств. На премиум тарифе вы можете
+        скачать все композиции на ваше устройство и слушать музыку без подключения к интернету
+      </p>
+    </section>
+  </main>
+  <footer>  
 
+  </footer>
   
 
 </body>
