fourth step finished

--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,51 @@
         скачать все композиции на ваше устройство и слушать музыку без подключения к интернету
       </p>
     </section>
+    <section class="page-news container">
+      <h2 class="title-2">Последние новости</h2>
+      <div class="newses">
+        <div class="news-item">
+          <img src="images/Music to Be Murdered By.png" alt="Album Eminem" class="first-wrapper img-news">
+          <div class="news-wrapper second-wrapper">
+            <div class="news-body">
+              <h3 class="news-title">Music to Be Murdered By</h3>
+              <p class="news-text">
+               Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе.
+                На альбоме вас ждёт 20 новых треков.
+              </p>
+            </div>
+            <div class="news-footer">
+              <div class="news-author">
+                <img class="avatar" src="images/avatar.png" alt="author avatar">
+                <p class="avtor-company">Music box</p>
+                <p class="news-data">17/01/2020</p>
+              </div>
+              <a href="#" class="btn btn-news">К альбому</a>
+            </div>
+          </div>
+        </div>
+        <div class="news-item">
+          <div class="news-wrapper first-wrapper">
+            <div class="news-body">
+              <h3 class="news-title">Ordinary Man</h3>
+              <p class="news-text">
+                Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man.
+                Слушайте в числе первых на Music Box
+              </p>
+            </div>
+            <div class="news-footer">
+              <div class="news-author">
+                <img class="avatar" src="images/avatar.png" alt="author avatar">
+                <p class="avtor-company">Music box</p>
+                <p class="news-data">24/02/2020</p>
+              </div>
+              <a href="#" class="btn btn-news">К альбому</a>
+            </div>
+          </div>
+          <img src="images/Ordinary Man.png" alt="Album Ozzy Osborn" class="second-wrapper img-news">
+        </div>
+      </div>
+    </section>
   </main>
   <footer>  
 
