five step finished

--- a/src/index.html
+++ b/src/index.html
@@ -137,6 +137,23 @@
         </div>
       </div>
     </section>
+    <section class="page-app container">
+      <h2 class="title-app">Мобильное приложение</h2>
+      <div class="app-wrapper">
+        <div class="app-text">
+          <p>
+            Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого
+            устройства на базе операционных систем Androind и iOS
+          </p>
+          <p>
+            С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции.
+            Вы можете слушать музыку даже без интернета.
+          </p>
+          <a href="#" class="btn btn-app">Скачать</a>
+        </div>
+        <img src="images/iphone.png" alt="mobile app" class="img-app">
+      </div>
+    </section>
   </main>
   <footer>  
 
