--- a/src/index.html
+++ b/src/index.html
@@ -155,10 +155,103 @@
       </div>
     </section>
   </main>
-  <footer>  
-
+  <footer class="page-footer">  
+    <div class="footer-lists">
+      <div class="container footer-wrapper">
+        <div class="footer-items">
+          <h4 class="item-title">О нас</h4>
+          <ul class="footer-list">
+            <li class="footer-item">
+              <a href="#" class="footer-link">История компании</a>
+            </li>
+            <li class="footer-item">
+              <a href="#" class="footer-link">Карьера</a>
+            </li>
+            <li class="footer-item">
+              <a href="#" class="footer-link">Особенности</a>
+            </li>
+            <li class="footer-item">
+              <a href="#" class="footer-link">Пресса</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-items">
+          <h4 class="item-title">Поддержка</h4>
+          <ul class="footer-list">
+            <li class="footer-item">
+              <a href="#" class="footer-link">База знаний</a>
+            </li>
+            <li class="footer-item">
+              <a href="#" class="footer-link">Тарифы</a>
+            </li>
+            <li class="footer-item">
+              <a href="#" class="footer-link">Мобильное приложение</a>
+            </li>
+            <li class="footer-item">
+              <a href="#" class="footer-link">Условия использования</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-items">
+          <h4 class="item-title">Контакты</h4>
+          <ul class="footer-list">
+            <li class="footer-item">
+              <a href="mailto:hello@music.box" class="footer-link">hello@music.box</a>
+            </li>
+            <li class="footer-item">
+             <p class="footer-link">Russia, Moscow. Music Box studio</p>
+            </li>
+            <li class="footer-item">
+              <a href="tel:+ 7 499 999 99 99" class="footer-link">+ 7 499 999 99 99</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-items">
+          <h4 class="item-title social-title">Подписывайтесь</h4>
+          <ul class="footer-social">
+            <li class="footer-item">
+              <a href="https://www.google.com/" class="footer-link">
+                <img src="images/Google+.png" alt="Google" width="26" height="17">
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="https://twitter.com/" class="footer-link">
+                <img src="images/Twitter.png" alt="Twitter" width="22" height="19">
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="https://ru-ru.facebook.com/" class="footer-link">
+                <img src="images/Facebook.png" alt="Facebook" width="12" height="20">
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="https://www.instagram.com/" class="footer-link">
+                <img src="images/Instagram.png" alt="Instagram" width="19" height="20">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-main container">
+      <ul class="footer-main-list">
+        <li class="footer-main-item">
+          <a href="#" class="footer-main-link">Магазин</a>
+        </li>
+        <li class="footer-main-item">
+          <a href="#" class="footer-main-link">Обслуживание</a>
+        </li>
+        <li class="footer-main-item">
+          <a href="#" class="footer-main-link">Блог</a>
+        </li>
+        <li class="footer-main-item">
+          <a href="#" class="footer-main-link">Поддержка</a>
+        </li>
+        <li class="footer-main-item">
+          <a href="#" class="footer-main-link">Контакты</a>
+        </li>
+      </ul>
+    </div>
   </footer>
-  
-
 </body>
 </html>
