--- a/src/artist.html
+++ b/src/artist.html
@@ -43,7 +43,12 @@
         </div>
       </nav>
       <section class="page-description">
-        
+        <h1 class="artist-title">Morten Harket</h1>
+        <p class="header-text">24 875 поклонников</p>
+        <div class="line-btns">
+          <button class="btn btn-violet btn-artist">МИКС</button>
+          <button class="btn btn-orange btn-artist">В ИЗБРАННОЕ</button>  
+        </div>
       </section>
     </div>
   </header>
@@ -52,7 +57,7 @@
 
 
 
-    
+
   </main>
   <footer class="page-footer">  
     <div class="footer-lists">
