Heigth step finished

--- a/src/artist.html
+++ b/src/artist.html
@@ -53,6 +53,80 @@
     </div>
   </header>
   <main>
+    <section class="page-popular-track container">
+      <h2 class="popular-title">Популярные треки</h2>
+      <div class="popular-wrapper">
+        <div class="popular-track">
+          <img src="images/Wild Seed.png" alt="Wild Seed" width="55" height="55">
+          <div class="track-info">
+            <div class="track-name">
+              <h3 class="album-name">Spanish Step</h3>
+              <p class="track-autor">Morten Harket</p>
+            </div>
+            <p class="track-time">4:07</p>
+          </div>
+        </div>
+
+        <div class="popular-track">
+          <img src="images/Letter from Egypt.png" alt="Letter from Egypt" width="55" height="55">
+          <div class="track-info">
+            <div class="track-name">
+              <h3 class="album-name">With You - With Me</h3>
+              <p class="track-autor">Morten Harket</p>
+            </div>
+            <p class="track-time">3:48</p>
+          </div>
+        </div>
+
+        <div class="popular-track">
+          <img src="images/Brother.png" alt="Brother" width="55" height="55">
+          <div class="track-info">
+            <div class="track-name">
+              <h3 class="album-name">Brother</h3>
+              <p class="track-autor">Morten Harket</p>
+            </div>
+            <p class="track-time">5:05</p>
+          </div>
+        </div>
+
+        <div class="popular-track">
+          <img src="images/Wild Seed.png" alt="Wild Seed" width="55" height="55">
+          <div class="track-info">
+            <div class="track-name">
+              <h3 class="album-name">Brodsky Tune</h3>
+              <p class="track-autor">Morten Harket</p>
+            </div>
+            <p class="track-time">4:24</p>
+          </div>
+        </div>
+
+        <div class="popular-track">
+          <img src="images/Letter from Egypt.png" alt="Letter from Egypt" width="55" height="55">
+          <div class="track-info">
+            <div class="track-name">
+              <h3 class="album-name">Darkspace</h3>
+              <p class="track-autor">Morten Harket</p>
+            </div>
+            <p class="track-time">3:45</p>
+          </div>
+        </div>
+
+        <div class="popular-track">
+          <img src="images/Out of My Hands.png" alt="Out of My Hands" width="55" height="55">
+          <div class="track-info">
+            <div class="track-name">
+              <h3 class="album-name">Burn Money Burn</h3>
+              <p class="track-autor">Morten Harket</p>
+            </div>
+            <p class="track-time">3:52</p>
+          </div>
+        </div>
+
+
+      </div>
+
+
+    </section>
 
 
 
