Nine step finished

--- a/src/artist.html
+++ b/src/artist.html
@@ -121,13 +121,60 @@
             <p class="track-time">3:52</p>
           </div>
         </div>
-
-
       </div>
-
-
     </section>
+    <section class="page-discography container">
+      <h2 class="disco-title">Дискография</h2>
+      <div class="disco-wrapper">
+        <div class="discography-item">
+          <img src="images/Brother.png" alt="Brother Album" class="disco-img" width="250" height="250">
+          <div class="discography-info">
+            <h3 class="disco-name">Brother</h3>
+            <p class="disco-year">2014</p>
+          </div>
+        </div>
+     
+        <div class="discography-item">
+          <img src="images/Out of My Hands.png" alt="Out of My Hands Album" class="disco-img" width="250" height="250">
+          <div class="discography-info">
+            <h3 class="disco-name">Out Of My Hands</h3>
+            <p class="disco-year">2012</p>
+          </div>
+        </div>
 
+        <div class="discography-item">
+          <img src="images/Letter from Egypt.png" alt="Letter from Egypt" class="disco-img" width="250" height="250">
+          <div class="discography-info">
+            <h3 class="disco-name">Letter From Egypt</h3>
+            <p class="disco-year">2008</p>
+          </div>
+        </div>
+
+        <div class="discography-item">
+          <img src="images/Vogts Villa.png" alt="Vogts Villa" class="disco-img" width="250" height="250">
+          <div class="discography-info">
+            <h3 class="disco-name">Vogts Vills</h3>
+            <p class="disco-year">1996</p>
+          </div>
+        </div>
+
+        <div class="discography-item">
+          <img src="images/Wild Seed.png" alt="Wild Seed" class="disco-img" width="250" height="250">
+          <div class="discography-info">
+            <h3 class="disco-name">Wild Seed</h3>
+            <p class="disco-year">1995</p>
+          </div>
+        </div>
+
+        <div class="discography-item">
+          <img src="images/Poetenes Evangelium.png" alt="Poetenes Evangelium" class="disco-img" width="250" height="250">
+          <div class="discography-info">
+            <h3 class="disco-name">Poetenes Evangelium</h3>
+            <p class="disco-year">1993</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
 
