--- a/src/artist.html
+++ b/src/artist.html
@@ -175,10 +175,92 @@
         </div>
       </div>
     </section>
+    <section class="page-similar container">
+      <h2 class="similar-title">Похожие исполнители</h2>
+      <div class="similar-wrapper">
 
+        <div class="similar-item">
+          <img src="images/A-ha.png" alt="A-ha" class="similar-img" width="250" height="250">
+          <div class="similar-info">
+            <h3 class="similar-item-title">A-Ha</h3>
+            <p class="similar-text">
+              417 086 поклонников
+            </p>
+          </div>
+        </div>
 
+        <div class="similar-item">
+          <img src="images/Tears for Fears.png" alt="Tears for Fears" class="similar-img" width="250" height="250">
+          <div class="similar-info">
+            <h3 class="similar-item-title">Tears For Fears</h3>
+            <p class="similar-text">
+              434 086 поклонников
+            </p>
+          </div>
+        </div>
 
+        <div class="similar-item">
+          <img src="images/Duran Duran.png" alt="Duran Duran" class="similar-img" width="250" height="250">
+          <div class="similar-info">
+            <h3 class="similar-item-title">Duran Duran</h3>
+            <p class="similar-text">
+              631 071 поклонник
+            </p>
+          </div>
+        </div>
 
+        <div class="similar-item">
+          <img src="images/Jack Savoretti.png" alt="Jack Savoretti" class="similar-img" width="250" height="250">
+          <div class="similar-info">
+            <h3 class="similar-item-title">Jack Savoretti</h3>
+            <p class="similar-text">
+              26 857 поклонников
+            </p>
+          </div>
+        </div>
+
+        <div class="similar-item">
+          <img src="images/Keane.png" alt="Keane" class="similar-img" width="250" height="250">
+          <div class="similar-info">
+            <h3 class="similar-item-title">Keane</h3>
+            <p class="similar-text">
+              1 704 358 поклонников
+            </p>
+          </div>
+        </div>
+
+        <div class="similar-item">
+          <img src="images/Frank Sinatra.png" alt="Frank Sinatra" class="similar-img" width="250" height="250">
+          <div class="similar-info">
+            <h3 class="similar-item-title">Frank Sinatra</h3>
+            <p class="similar-text">
+              1 653 882 поклонников
+            </p>
+          </div>
+        </div>
+
+        <div class="similar-item">
+          <img src="images/Paul Young.png" alt="Paul Young" class="similar-img" width="250" height="250">
+          <div class="similar-info">
+            <h3 class="similar-item-title">Paul Young</h3>
+            <p class="similar-text">
+              50 329 поклонников
+            </p>
+          </div>
+        </div>
+
+        <div class="similar-item">
+          <img src="images/Chris Rea.png" alt="Chris Rea" class="similar-img" width="250" height="250">
+          <div class="similar-info">
+            <h3 class="similar-item-title">Chris Rea</h3>
+            <p class="similar-text">
+              73 351 поклонников
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </section>
   </main>
   <footer class="page-footer">  
     <div class="footer-lists">
