--- a/src/artist.html
+++ b/src/artist.html
@@ -42,7 +42,7 @@
           <a href="#" class="search-link">Поиск...</a>
         </div>
       </nav>
-      <section class="page-description">
+      <section class="page-description" id="page-description">
         <h1 class="artist-title">Morten Harket</h1>
         <p class="header-text">24 875 поклонников</p>
         <div class="line-btns">
@@ -53,7 +53,7 @@
     </div>
   </header>
   <main>
-    <section class="page-popular-track container">
+    <section class="page-popular-track container" id="page-popular-track">
       <h2 class="popular-title">Популярные треки</h2>
       <div class="popular-wrapper">
         <div class="popular-track">
@@ -123,7 +123,7 @@
         </div>
       </div>
     </section>
-    <section class="page-discography container">
+    <section class="page-discography container" id="page-discography">
       <h2 class="disco-title">Дискография</h2>
       <div class="disco-wrapper">
         <div class="discography-item">
@@ -175,7 +175,7 @@
         </div>
       </div>
     </section>
-    <section class="page-similar container">
+    <section class="page-similar container" id="page-similar">
       <h2 class="similar-title">Похожие исполнители</h2>
       <div class="similar-wrapper">
 
