--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
           <a href="#" class="search-link">Поиск...</a>
         </div>
       </nav>
-      <section class="page-description">
+      <section class="page-description" id="page-description">
         <h1 class="title">Онлайн музыка где угодно</h1>
         <h2 class="title">без ограничений</h2>
         <p class="welcome-text">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</p>
@@ -59,7 +59,7 @@
     </div>
   </header>
   <main>
-    <section class="page-pricing container">
+    <section class="page-pricing container" id="page-pricing">
       <h2 class="title-pricing">Формы подписки</h2>
       <div class="catalog-wrapper">
         <div class="pricing-item bg-free">
@@ -92,7 +92,7 @@
         скачать все композиции на ваше устройство и слушать музыку без подключения к интернету
       </p>
     </section>
-    <section class="page-news container">
+    <section class="page-news container" id="page-news">
       <h2 class="title-2">Последние новости</h2>
       <div class="newses">
         <div class="news-item">
@@ -137,7 +137,7 @@
         </div>
       </div>
     </section>
-    <section class="page-app container">
+    <section class="page-app container" id="page-app">
       <h2 class="title-app">Мобильное приложение</h2>
       <div class="app-wrapper">
         <div class="app-text">
