--- a/src/artist.html
+++ b/src/artist.html
@@ -11,9 +11,9 @@
   <header class="bg-header-artist bg-header">
     <div class="container">
       <nav class="nav-wrapper">
-        <div class="nav-element nav-music">
+        <p class="nav-element nav-music">
           Music Box
-        </div>
+        </p>
         <div class="nav-element">
           <ul class="nav-list">
             <li class="nav-item">
