--- a/src/artist.html
+++ b/src/artist.html
@@ -41,7 +41,7 @@
         <a href="#" class="search-link">Поиск...</a>
       </div>
     </nav>
-    <section class="page-description" id="page-description">
+    <section class="page-description container" id="page-description">
       <h1 class="artist-title">Morten Harket</h1>
       <p class="header-text">24 875 поклонников</p>
       <div class="line-btns">
