--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
         <a href="#" class="search-link">Поиск...</a>
       </div>
     </nav>
-    <section class="page-description" id="page-description">
+    <section class="page-description container" id="page-description">
       <h1 class="title">Онлайн музыка где угодно</h1>
       <h2 class="title">без ограничений</h2>
       <p class="welcome-text">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</p>
