--- a/src/artist.html
+++ b/src/artist.html
@@ -9,11 +9,12 @@
 </head>
 <body>
   <header class="bg-header-artist bg-header">
-    <nav class="nav-wrapper">
-      <p class="nav-element nav-music">
-        Music Box
-      </p>
-      <div class="nav-element">
+    <div class="container">
+      <nav class="nav-wrapper">
+        <p class="nav-element nav-music">
+         Music Box
+        </p>
+        <div class="nav-element">
           <ul class="nav-list">
             <li class="nav-item">
               <a href="index.html" class="nav-link">
@@ -36,19 +37,20 @@
               </a>
             </li>
          </ul>
-      </div>
-      <div class="nav-element nav-search">
-        <a href="#" class="search-link">Поиск...</a>
-      </div>
-    </nav>
-    <section class="page-description" id="page-description">
-      <h1 class="artist-title">Morten Harket</h1>
-      <p class="header-text">24 875 поклонников</p>
-      <div class="line-btns">
-        <button class="btn btn-violet btn-artist">МИКС</button>
-        <button class="btn btn-orange btn-artist">В ИЗБРАННОЕ</button>  
-      </div>
-    </section>
+        </div>
+        <div class="nav-element nav-search">
+          <a href="#" class="search-link">Поиск...</a>
+        </div>
+      </nav>
+      <section class="page-description" id="page-description">
+        <h1 class="artist-title">Morten Harket</h1>
+        <p class="header-text">24 875 поклонников</p>
+        <div class="line-btns">
+          <button class="btn btn-violet btn-artist">МИКС</button>
+          <button class="btn btn-orange btn-artist">В ИЗБРАННОЕ</button>  
+        </div>
+      </section>
+    </div>
   </header>
   <main>
     <section class="page-popular-track container" id="page-popular-track">
