--- a/src/index.html
+++ b/src/index.html
@@ -8,53 +8,56 @@
   <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+  
   <header class="bg-header">
-    <nav class="nav-wrapper">
-      <p class="nav-element nav-music">
-        Music Box
-      </p>
-      <div class="nav-element">
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a href="index.html" class="nav-link selected">
-              Главная
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="artist.html" class="nav-link">
-              Каталог
-             </a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">
-              Исполнители
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">
-              Контакты
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="nav-element nav-search">
-        <a href="#" class="search-link">Поиск...</a>
-      </div>
-    </nav>
-    <section class="page-description" id="page-description">
-      <h1 class="title">Онлайн музыка где угодно</h1>
-      <h2 class="title">без ограничений</h2>
-      <p class="welcome-text">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</p>
-      <form class="welcome-form">
-        <div class="welcome-datas">
-          <label class="sr-only" for="name">Имя</label>
-          <input type="text" class="welcome-input" id="name" placeholder="Имя">
-          <label class="sr-only" for="email">Email</label>
-          <input type="text" class="welcome-input" id="email" placeholder="Email">
+    <div class="container">
+      <nav class="nav-wrapper">
+        <p class="nav-element nav-music">
+          Music Box
+        </p>
+        <div class="nav-element">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link selected">
+                Главная
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="artist.html" class="nav-link">
+                Каталог
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                Исполнители
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                Контакты
+              </a>
+            </li>
+          </ul>
         </div>
-        <button type="submit" class="btn btn-green">Получить доступ</button>   
-      </form>
-    </section>
+        <div class="nav-element nav-search">
+          <a href="#" class="search-link">Поиск...</a>
+        </div>
+      </nav>
+      <section class="page-description" id="page-description">
+        <h1 class="title">Онлайн музыка где угодно</h1>
+        <h2 class="title">без ограничений</h2>
+        <p class="welcome-text">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</p>
+        <form class="welcome-form">
+          <div class="welcome-datas">
+            <label class="sr-only" for="name">Имя</label>
+            <input type="text" class="welcome-input" id="name" placeholder="Имя">
+            <label class="sr-only" for="email">Email</label>
+            <input type="text" class="welcome-input" id="email" placeholder="Email">
+          </div>
+          <button type="submit" class="btn btn-green">Получить доступ</button>   
+        </form>
+      </section>
+      </div>
   </header>
   <main>
     <section class="page-pricing container" id="page-pricing">
