--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   
-  <header class="bg-header">
+  <header class="bg-header" id="page-description">
     <div class="container">
       <nav class="nav-wrapper">
         <p class="nav-element nav-music">
@@ -43,7 +43,7 @@
           <a href="#" class="search-link">Поиск...</a>
         </div>
       </nav>
-      <section class="page-description" id="page-description">
+      <section class="page-description">
         <h1 class="title">Онлайн музыка где угодно</h1>
         <h2 class="title">без ограничений</h2>
         <p class="welcome-text">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</p>
