--- a/src/artist.html
+++ b/src/artist.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-  <header class="bg-header-artist bg-header">
+  <header class="bg-header-artist bg-header" id="page-description">
     <div class="container">
       <nav class="nav-wrapper">
         <p class="nav-element nav-music">
@@ -42,7 +42,7 @@
           <a href="#" class="search-link">Поиск...</a>
         </div>
       </nav>
-      <section class="page-description" id="page-description">
+      <section class="page-description">
         <h1 class="artist-title">Morten Harket</h1>
         <p class="header-text">24 875 поклонников</p>
         <div class="line-btns">
