--- a/src/artist.html
+++ b/src/artist.html
@@ -8,21 +8,21 @@
   <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-  <header class="bg-header-artist bg-header" id="page-description">
+  <header class="bg-header bg-header-artist" id="page-description">
     <div class="container">
       <nav class="nav-wrapper">
         <p class="nav-element nav-music">
-         Music Box
+          Music Box
         </p>
         <div class="nav-element">
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="index.html" class="nav-link">
+              <a href="index.html" class="nav-link selected">
                 Главная
               </a>
             </li>
             <li class="nav-item">
-              <a href="artist.html" class="nav-link selected">
+              <a href="artist.html" class="nav-link">
                 Каталог
               </a>
             </li>
@@ -36,7 +36,7 @@
                 Контакты
               </a>
             </li>
-         </ul>
+          </ul>
         </div>
         <div class="nav-element nav-search">
           <a href="#" class="search-link">Поиск...</a>
@@ -50,7 +50,7 @@
           <button class="btn btn-orange btn-artist">В ИЗБРАННОЕ</button>  
         </div>
       </section>
-    </div>
+      </div>
   </header>
   <main>
     <section class="page-popular-track container" id="page-popular-track">
