--- a/src/artist.html
+++ b/src/artist.html
@@ -42,17 +42,18 @@
           <a href="#" class="search-link">Поиск...</a>
         </div>
       </nav>
-      <section class="page-description">
-        <h1 class="artist-title">Morten Harket</h1>
-        <p class="header-text">24 875 поклонников</p>
-        <div class="line-btns">
-          <button class="btn btn-violet btn-artist">МИКС</button>
-          <button class="btn btn-orange btn-artist">В ИЗБРАННОЕ</button>  
-        </div>
-      </section>
+    </div>
+    <section class="page-description container">
+      <h1 class="artist-title">Morten Harket</h1>
+      <p class="header-text">24 875 поклонников</p>
+      <div class="line-btns">
+        <button class="btn btn-violet btn-artist">МИКС</button>
+        <button class="btn btn-orange btn-artist">В ИЗБРАННОЕ</button>  
       </div>
+     </section>
   </header>
   <main>
+    
     <section class="page-popular-track container" id="page-popular-track">
       <h2 class="popular-title">Популярные треки</h2>
       <div class="popular-wrapper">
