--- a/src/index.html
+++ b/src/index.html
@@ -43,21 +43,21 @@
           <a href="#" class="search-link">Поиск...</a>
         </div>
       </nav>
-      <section class="page-description">
-        <h1 class="title">Онлайн музыка где угодно</h1>
-        <h2 class="title">без ограничений</h2>
-        <p class="welcome-text">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</p>
-        <form class="welcome-form">
-          <div class="welcome-datas">
-            <label class="sr-only" for="name">Имя</label>
-            <input type="text" class="welcome-input" id="name" placeholder="Имя">
-            <label class="sr-only" for="email">Email</label>
-            <input type="text" class="welcome-input" id="email" placeholder="Email">
-          </div>
-          <button type="submit" class="btn btn-green">Получить доступ</button>   
-        </form>
-      </section>
-      </div>
+    </div>
+    <section class="page-description container">
+      <h1 class="title">Онлайн музыка где угодно</h1>
+      <h2 class="title-2">без ограничений</h2>
+      <p class="welcome-text">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</p>
+      <form class="welcome-form">
+        <div class="welcome-datas">
+          <label class="sr-only" for="name">Имя</label>
+          <input type="text" class="welcome-input" id="name" placeholder="Имя">
+          <label class="sr-only" for="email">Email</label>
+          <input type="text" class="welcome-input" id="email" placeholder="Email">
+        </div>
+        <button type="submit" class="btn btn-green">Получить доступ</button>   
+      </form>
+    </section>
   </header>
   <main>
     <section class="page-pricing container" id="page-pricing">
