--- a/src/index.html
+++ b/src/index.html
@@ -60,99 +60,105 @@
     </section>
   </header>
   <main>
-    <section class="page-pricing container" id="page-pricing">
-      <h2 class="title-pricing">Формы подписки</h2>
-      <div class="catalog-wrapper">
-        <div class="pricing-item bg-free">
-          <h3 class="card-item">Бесплатная</h3>
-          <p class="pricing-value"><span class="price">0</span><span> РУБ.</span></p>
-          <a href="#" class="btn btn-trans">Оформить</a>
-          <p class="pricing-footer">
-            Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама
-          </p>
-        </div>
-        <div class="pricing-item bg-standard">
-          <h3 class="card-item">Стандартная</h3>
-          <p class="pricing-value"><span class="price">250</span><span> РУБ.</span></p>
-          <a href="#" class="btn btn-trans">Оформить</a>
-          <p class="pricing-footer">
-            Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве
-          </p>
-        </div>
-        <div class="pricing-item bg-premium">
-          <h3 class="card-item">Премиум</h3>
-          <p class="pricing-value"><span class="price">500</span><span> РУБ.</span></p>
-          <a href="#" class="btn btn-trans">Оформить</a>
-          <p class="pricing-footer">
-            Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве
-          </p>
-        </div>
-      </div>
-      <p class="price-description">
-        На всех тарифах возможно прослушивание музыки с мобильных устройств. На премиум тарифе вы можете
-        скачать все композиции на ваше устройство и слушать музыку без подключения к интернету
-      </p>
-    </section>
-    <section class="page-news container" id="page-news">
-      <h2 class="title-2">Последние новости</h2>
-      <div class="newses">
-        <div class="news-item">
-          <img src="images/Music to Be Murdered By.png" alt="Album Eminem" class="first-wrapper img-news">
-          <div class="news-wrapper second-wrapper">
-            <div class="news-body">
-              <h3 class="news-title">Music to Be Murdered By</h3>
-              <p class="news-text">
-               Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе.
-                На альбоме вас ждёт 20 новых треков.
-              </p>
-            </div>
-            <div class="news-footer">
-              <div class="news-author">
-                <img class="avatar" src="images/avatar.png" alt="author avatar">
-                <p class="avtor-company">Music box</p>
-                <p class="news-data">17/01/2020</p>
-              </div>
-              <a href="#" class="btn btn-news">К альбому</a>
-            </div>
+    <section class="page-pricing" id="page-pricing">
+      <div class="container">
+        <h2 class="title-pricing">Формы подписки</h2>
+        <div class="catalog-wrapper">
+          <div class="pricing-item bg-free">
+            <h3 class="card-item">Бесплатная</h3>
+            <p class="pricing-value"><span class="price">0</span><span> РУБ.</span></p>
+            <a href="#" class="btn btn-trans">Оформить</a>
+            <p class="pricing-footer">
+              Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама
+            </p>
+          </div>
+          <div class="pricing-item bg-standard">
+            <h3 class="card-item">Стандартная</h3>
+            <p class="pricing-value"><span class="price">250</span><span> РУБ.</span></p>
+            <a href="#" class="btn btn-trans">Оформить</a>
+            <p class="pricing-footer">
+             Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве
+            </p>
+          </div>
+          <div class="pricing-item bg-premium">
+            <h3 class="card-item">Премиум</h3>
+            <p class="pricing-value"><span class="price">500</span><span> РУБ.</span></p>
+            <a href="#" class="btn btn-trans">Оформить</a>
+            <p class="pricing-footer">
+              Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве
+           </p>
           </div>
         </div>
-        <div class="news-item">
-          <div class="news-wrapper first-wrapper">
-            <div class="news-body">
-              <h3 class="news-title">Ordinary Man</h3>
-              <p class="news-text">
-                Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man.
-                Слушайте в числе первых на Music Box
-              </p>
-            </div>
-            <div class="news-footer">
-              <div class="news-author">
-                <img class="avatar" src="images/avatar.png" alt="author avatar">
-                <p class="avtor-company">Music box</p>
-                <p class="news-data">24/02/2020</p>
+        <p class="price-description">
+          На всех тарифах возможно прослушивание музыки с мобильных устройств. На премиум тарифе вы можете
+          скачать все композиции на ваше устройство и слушать музыку без подключения к интернету
+       </p>
+      </div>
+    </section>
+    <section class="page-news" id="page-news">
+      <div class="container">
+        <h2 class="title-2">Последние новости</h2>
+        <div class="newses">
+          <div class="news-item">
+            <img src="images/Music to Be Murdered By.png" alt="Album Eminem" class="first-wrapper img-news">
+            <div class="news-wrapper second-wrapper">
+              <div class="news-body">
+                <h3 class="news-title">Music to Be Murdered By</h3>
+                <p class="news-text">
+                  Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе.
+                  На альбоме вас ждёт 20 новых треков.
+                </p>
               </div>
-              <a href="#" class="btn btn-news">К альбому</a>
+              <div class="news-footer">
+                <div class="news-author">
+                  <img class="avatar" src="images/avatar.png" alt="author avatar">
+                  <p class="avtor-company">Music box</p>
+                  <p class="news-data">17/01/2020</p>
+                </div>
+                <a href="#" class="btn btn-news">К альбому</a>
+              </div>
             </div>
           </div>
-          <img src="images/Ordinary Man.png" alt="Album Ozzy Osborn" class="second-wrapper img-news">
+          <div class="news-item">
+            <div class="news-wrapper first-wrapper">
+              <div class="news-body">
+                <h3 class="news-title">Ordinary Man</h3>
+                <p class="news-text">
+                  Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man.
+                  Слушайте в числе первых на Music Box
+                </p>
+              </div>
+              <div class="news-footer">
+                <div class="news-author">
+                  <img class="avatar" src="images/avatar.png" alt="author avatar">
+                  <p class="avtor-company">Music box</p>
+                  <p class="news-data">24/02/2020</p>
+                </div>
+                <a href="#" class="btn btn-news">К альбому</a>
+              </div>
+            </div>
+            <img src="images/Ordinary Man.png" alt="Album Ozzy Osborn" class="second-wrapper img-news">
+          </div>
         </div>
       </div>
     </section>
-    <section class="page-app container" id="page-app">
-      <h2 class="title-app">Мобильное приложение</h2>
-      <div class="app-wrapper">
-        <div class="app-text">
-          <p>
-            Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого
-            устройства на базе операционных систем Androind и iOS
-          </p>
-          <p>
-            С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции.
-            Вы можете слушать музыку даже без интернета.
-          </p>
-          <a href="#" class="btn btn-app">Скачать</a>
+    <section class="page-app" id="page-app">
+      <div class="container">
+        <h2 class="title-app">Мобильное приложение</h2>
+        <div class="app-wrapper">
+          <div class="app-text">
+            <p>
+              Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого
+              устройства на базе операционных систем Androind и iOS
+            </p>
+            <p>
+              С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции.
+              Вы можете слушать музыку даже без интернета.
+            </p>
+            <a href="#" class="btn btn-app">Скачать</a>
+          </div>
+          <img src="images/iphone.png" alt="mobile app" class="img-app">
         </div>
-        <img src="images/iphone.png" alt="mobile app" class="img-app">
       </div>
     </section>
   </main>
