--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
   <title>Портал «Music Box» evabrarova@gmail.com</title>
   <link rel="stylesheet" href="css/app.css">
 </head>
-<body>
-  
+<body> 
   <header class="bg-header" id="page-description">
     <div class="container">
       <nav class="nav-wrapper">
@@ -60,8 +59,8 @@
     </section>
   </header>
   <main>
-    <section class="page-pricing" id="page-pricing">
-      <div class="container">
+    <section class="page-pricing">
+      <div class="container" id="page-pricing">
         <h2 class="title-pricing">Формы подписки</h2>
         <div class="catalog-wrapper">
           <div class="pricing-item bg-free">
