--- a/src/index.html
+++ b/src/index.html
@@ -59,8 +59,8 @@
     </section>
   </header>
   <main>
-    <section class="page-pricing">
-      <div class="container" id="page-pricing">
+    <div id="page-pricing">
+      <section class="page-pricing container">
         <h2 class="title-pricing">Формы подписки</h2>
         <div class="catalog-wrapper">
           <div class="pricing-item bg-free">
@@ -92,8 +92,8 @@
           На всех тарифах возможно прослушивание музыки с мобильных устройств. На премиум тарифе вы можете
           скачать все композиции на ваше устройство и слушать музыку без подключения к интернету
        </p>
-      </div>
-    </section>
+      </section>
+    </div>
     <section class="page-news" id="page-news">
       <div class="container">
         <h2 class="title-2">Последние новости</h2>
