--- a/src/index.html
+++ b/src/index.html
@@ -59,8 +59,8 @@
     </section>
   </header>
   <main>
-    <section class="container" id="page-pricing">
-      <div class="page-pricing">
+    <section id="page-pricing">
+      <div class="page-pricing container">
         <h2 class="title-pricing">Формы подписки</h2>
         <div class="catalog-wrapper">
           <div class="pricing-item bg-free">
