--- a/src/index.html
+++ b/src/index.html
@@ -58,9 +58,9 @@
       </form>
     </section>
   </header>
-  <main>
+  <main class="container">
     <section id="page-pricing">
-      <div class="page-pricing container">
+      <div class="page-pricing">
         <h2 class="title-pricing">Формы подписки</h2>
         <div class="catalog-wrapper">
           <div class="pricing-item bg-free">
