--- a/src/index.html
+++ b/src/index.html
@@ -58,8 +58,8 @@
       </form>
     </section>
   </header>
-  <main class="container">
-    <section id="page-pricing">
+  <main>
+    <section id="page-pricing" class="container">
       <div class="page-pricing">
         <h2 class="title-pricing">Формы подписки</h2>
         <div class="catalog-wrapper">
