--- a/src/index.html
+++ b/src/index.html
@@ -94,8 +94,8 @@
        </p>
       </div>
     </section>
-    <section class="page-news" id="page-news">
-      <div class="container">
+    <section class="container" id="page-news">
+      <div class="page-news">
         <h2 class="title-2">Последние новости</h2>
         <div class="newses">
           <div class="news-item">
@@ -141,8 +141,8 @@
         </div>
       </div>
     </section>
-    <section class="page-app" id="page-app">
-      <div class="container">
+    <section class="container" id="page-app">
+      <div class="page-app">
         <h2 class="title-app">Мобильное приложение</h2>
         <div class="app-wrapper">
           <div class="app-text">
