--- a/src/artist.html
+++ b/src/artist.html
@@ -53,8 +53,8 @@
      </section>
   </header>
   <main>
-    <section class="container" id="page-popular-track">
-      <div class="page-popular-track">
+    <section id="page-popular-track">
+      <div class="page-popular-track container">
         <h2 class="popular-title">Популярные треки</h2>
         <div class="popular-wrapper">
           <div class="popular-track">
@@ -125,8 +125,8 @@
         </div>
       </div>
     </section>
-    <section class="container" id="page-discography">
-      <div class="page-discography">
+    <section id="page-discography">
+      <div class="page-discography container">
         <h2 class="disco-title">Дискография</h2>
         <div class="disco-wrapper">
           <div class="discography-item">
@@ -179,8 +179,8 @@
         </div>
       </div>
     </section>
-    <section class="container" id="page-similar">
-      <div class="page-similar">
+    <section id="page-similar">
+      <div class="page-similar container">
         <h2 class="similar-title">Похожие исполнители</h2>
         <div class="similar-wrapper">
 
