--- a/src/index.html
+++ b/src/index.html
@@ -59,8 +59,8 @@
     </section>
   </header>
   <main>
-    <section id="page-pricing" class="container">
-      <div class="page-pricing">
+    <section id="page-pricing">
+      <div class="page-pricing container">
         <h2 class="title-pricing">Формы подписки</h2>
         <div class="catalog-wrapper">
           <div class="pricing-item bg-free">
@@ -94,8 +94,8 @@
        </p>
       </div>
     </section>
-    <section class="container" id="page-news">
-      <div class="page-news">
+    <section id="page-news">
+      <div class="page-news container">
         <h2 class="title-2">Последние новости</h2>
         <div class="newses">
           <div class="news-item">
@@ -141,8 +141,8 @@
         </div>
       </div>
     </section>
-    <section class="container" id="page-app">
-      <div class="page-app">
+    <section id="page-app">
+      <div class="page-app container">
         <h2 class="title-app">Мобильное приложение</h2>
         <div class="app-wrapper">
           <div class="app-text">
