--- a/src/index.html
+++ b/src/index.html
@@ -59,8 +59,8 @@
     </section>
   </header>
   <main>
-    <section id="page-pricing">
-      <div class="page-pricing container">
+    <section id="page-pricing" class="container">
+      <div class="page-pricing">
         <h2 class="title-pricing">Формы подписки</h2>
         <div class="catalog-wrapper">
           <div class="pricing-item bg-free">
@@ -94,8 +94,8 @@
        </p>
       </div>
     </section>
-    <section id="page-news">
-      <div class="page-news container">
+    <section id="page-news" class="container">
+      <div class="page-news">
         <h2 class="title-2">Последние новости</h2>
         <div class="newses">
           <div class="news-item">
