--- a/src/index.html
+++ b/src/index.html
@@ -141,8 +141,8 @@
         </div>
       </div>
     </section>
-    <section id="page-app">
-      <div class="page-app container">
+    <section id="page-app" class="container">
+      <div class="page-app">
         <h2 class="title-app">Мобильное приложение</h2>
         <div class="app-wrapper">
           <div class="app-text">
