--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
       </div>
     </section>
   </main>
-  <footer class="page-footer">  
+  <footer class="page-footer bg-gradient">  
     <div class="footer-lists">
       <div class="container footer-wrapper">
         <div class="footer-items">
