--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,7 @@
       <div class="container footer-wrapper">
         <div class="footer-items">
           <h2 class="item-title">О нас</h2>
-          <ul class="footer-list footer-list-full">
+          <ul class="footer-list">
             <li class="footer-item">
               <a href="#" class="footer-link">История компании</a>
             </li>
@@ -181,7 +181,7 @@
             </li>
           </ul>
         </div>
-        <div class="footer-items footer-list-full">
+        <div class="footer-items">
           <h2 class="item-title">Поддержка</h2>
           <ul class="footer-list">
             <li class="footer-item">
@@ -204,7 +204,7 @@
             <li class="footer-item footer-auto">
               <a href="mailto:hello@music.box" class="footer-link">hello@music.box</a>
             </li>
-            <li class="footer-item footer-adress">
+            <li class="footer-item">
              <p class="footer-link">Russia, Moscow. Music Box studio</p>
             </li>
             <li class="footer-item footer-auto">
