--- a/src/index.html
+++ b/src/index.html
@@ -201,13 +201,13 @@
         <div class="footer-items">
           <h2 class="item-title">Контакты</h2>
           <ul class="footer-list">
-            <li class="footer-item footer-auto">
+            <li class="footer-item footer-mail">
               <a href="mailto:hello@music.box" class="footer-link">hello@music.box</a>
             </li>
             <li class="footer-item">
              <p class="footer-link">Russia, Moscow. Music Box studio</p>
             </li>
-            <li class="footer-item footer-auto">
+            <li class="footer-item footer-phone">
               <a href="tel:+ 7 499 999 99 99" class="footer-link">+ 7 499 999 99 99</a>
             </li>
           </ul>
