--- a/src/artist.html
+++ b/src/artist.html
@@ -47,8 +47,12 @@
       <h1 class="artist-title">Morten Harket</h1>
       <p class="header-text">24 875 поклонников</p>
       <div class="line-btns">
-        <button class="btn btn-violet btn-artist">МИКС</button>
-        <button class="btn btn-orange btn-artist">В ИЗБРАННОЕ</button>  
+        <button class="btn btn-violet btn-artist">
+          <p class="btn-text">МИКС</p>
+        </button>
+        <button class="btn btn-orange btn-artist">
+          <p class="btn-text">В ИЗБРАННОЕ</p>
+        </button>  
       </div>
      </section>
   </header>
