--- a/src/artist.html
+++ b/src/artist.html
@@ -17,12 +17,12 @@
         <div class="nav-element">
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="index.html" class="nav-link selected">
+              <a href="index.html" class="nav-link">
                 Главная
               </a>
             </li>
             <li class="nav-item">
-              <a href="artist.html" class="nav-link">
+              <a href="artist.html" class="nav-link selected">
                 Каталог
               </a>
             </li>
@@ -272,7 +272,7 @@
       </div>
     </section>
   </main>
-  <footer class="page-footer">  
+  <footer class="page-footer bg-gradient">  
     <div class="footer-lists">
       <div class="container footer-wrapper">
         <div class="footer-items">
